--- a/src/styles/mainLayout.css
+++ b/src/styles/mainLayout.css
@@ -38,3 +38,48 @@ main {
     height: 90vh;
     overflow-y: auto;
 }
+
+
+/*Scroll bar code from: https://www.cssportal.com/css-scrollbar-generator/ */
+
+
+/* Firefox */
+
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #747474 #DFE9EB;
+}
+
+
+/* Chrome, Edge and Safari */
+
+*::-webkit-scrollbar {
+    width: 4px;
+    width: 4px;
+}
+
+*::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: #DFE9EB;
+}
+
+*::-webkit-scrollbar-track:hover {
+    background-color: #B8C0C2;
+}
+
+*::-webkit-scrollbar-track:active {
+    background-color: #B8C0C2;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #747474;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #747474;
+}
+
+*::-webkit-scrollbar-thumb:active {
+    background-color: #000000;
+}
