--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -60,3 +60,9 @@ nav span {
     color: var(--dark);
     border-radius: 2px;
 }
+
+@media only screen and (max-width: 780px) {
+    nav {
+        display: none;
+    }
+}
