--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -72,3 +72,18 @@ main>button:hover {
     transition: 0.3s;
     background-color: #4f5053;
 }
+
+@media only screen and (max-width: 425px) {
+    main li {
+        /*
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto auto;*/
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    input[type="checkbox"],
+    input[type="date"] {
+        max-height: 30.4px;
+    }
+}
